--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,8 @@
         <script src="js/models/user.js"></script>
         <script src="js/models/picture.js"></script>
         <script src="js/models/post.js"></script>
-        <script src="js/collections/posts.js"></script>
-        <script src="js/collections/users.js"></script>
+        <!--<script src="js/collections/posts.js"></script>
+        <script src="js/collections/users.js"></script>-->
         <script>
             window.onload = function() {
                 // bootstrap
